added title and icon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <DOCTYPE! html>
 <html>
+<head>
+	<title>starscape.dev</title>
+	<link rel="shortcut icon" href="/icon.ico" />
+</head>
 <style>
 body {
   background: #222;
