--- a/index.html
+++ b/index.html
@@ -1,66 +1,68 @@
 <DOCTYPE! html>
 <html>
-<head>
-	<title>starscape.dev</title>
-	<link rel="shortcut icon" href="/icon.ico" />
-</head>
-<style>
-body {
-  background: #222;
-}
+	<head>
+		<title>starscape.dev</title>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+	</head>
+	<style>
+	body {
+	  background: #222;
+	}
 
-h2 {
-  color: #666;
-  font-family: monospace;
-  text-align: center;
-}
+	h2 {
+	  color: #666;
+	  font-family: monospace;
+	  text-align: center;
+	}
 
-.background {
-  table-layout: fixed;
-  border-spacing: 0;
-}
+	.background {
+	  table-layout: fixed;
+	  border-spacing: 0;
+	}
 
-.background td {
-  padding: 0;
-}
+	.background td {
+	  padding: 0;
+	}
 
-.lava, .actor {
-  background: #e55;
-}
+	.lava, .actor {
+	  background: #e55;
+	}
 
-.wall {
-  background: #444;
-  border: solid 3px #333;
-  box-sizing: content-box;
-}
+	.wall {
+	  background: #444;
+	  border: solid 3px #333;
+	  box-sizing: content-box;
+	}
 
-.actor {
-  position: absolute;
-}
+	.actor {
+	  position: absolute;
+	}
 
-.coin {
-  background: #e2e838;
-  border-radius: 50%;
-}
+	.coin {
+	  background: #e2e838;
+	  border-radius: 50%;
+	}
 
-.player {
-  background: #335699;
-  box-shadow: none;
-}
+	.player {
+	  background: #335699;
+	  box-shadow: none;
+	}
 
-.lost .player {
-  background: #a04040;
-}
+	.lost .player {
+	  background: #a04040;
+	}
 
-.won .player {
-  background: green;
-}
+	.won .player {
+	  background: green;
+	}
 
-.game {
-  position: relative;
-  overflow: hidden;
-}
-</style>
-<h2> Simple JavaScript Game</h2>
-<script src="ninja.js"></script>
+	.game {
+	  position: relative;
+	  overflow: hidden;
+	}
+	</style>
+	<body>
+		<h2> Simple JavaScript Game</h2>
+		<script src="ninja.js"></script>
+	</body>
 </html>
