--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 	<head>
 		<title>starscape.dev</title>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+		<link rel="stylesheet" href="style.css">
 	</head>
+	<!--CodePen Pure CSS Parallel Pixel Stars by MattMarble-->
+	<div id="stars"></div>
+	<div id="stars2"></div>
+	<div id="stars3"></div>
+	
 	<style>
-	body {
-	  background: #222;
-	}
-
 	h2 {
-	  color: #666;
-	  font-family: monospace;
+	  color: #F0F8FF;
+	  font-family: fantasy;
 	  text-align: center;
 	}
-
+	h3 {
+	  color: #F0F8FF;
+	  font-family: fantasy;
+	  text-align: center;
+	}
 	.background {
 	  table-layout: fixed;
 	  border-spacing: 0;
@@ -61,8 +67,9 @@
 	  overflow: hidden;
 	}
 	</style>
-	<body>
-		<h2> Simple JavaScript Game</h2>
+	<body>	
+		<h2> Starscape.dev - Stargazer</h2>
 		<script src="ninja.js"></script>
+		<h3> Made by Kevin Chan </h3>
 	</body>
 </html>
